--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -9,14 +9,12 @@
       text-align: right;
       > ul {
         > li {
-            height: 42px;
-            display: flex;
-            align-items: center;
             padding: 0 10px;
           > a {
             color: white;
             display: flex;
             align-items: center;
+            height: 42px;
             .icon {
                 margin-right: 25px;
               i {
@@ -41,7 +39,7 @@
           > a {
             display: flex;
             strong {
-                margin-left: 125px;
+                margin-left: auto;
               transition: all 0.5s;
               i{
                 font-size: 11px;
@@ -75,6 +73,9 @@
                   margin-right: auto;
                   margin-left: 0;
                 }
+              }
+              span{
+                margin-left: 5px;
               }
               &.active {
                 font-size: 14px;
