--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -123,6 +123,7 @@ header {
     background-color: #f3f3f3;
     transition: transform 0.2s ease-in-out 0s, margin 0.2s ease-in-out 0s;
     .breadcrumb {
+      padding: 8px;
       background: #e9ebec;
       border-radius: 0px;
       height: 40px;
@@ -296,7 +297,7 @@ header {
       justify-content: space-between;
       .box {
         width: 100%;
-        height: 450px;
+        height: auto;
         background: white;
         margin-top: 35px;
       }
