--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header .link-items {
           justify-content: flex-end;
 }
 
-header .link-items ul {
+header .link-items > ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -37,7 +37,7 @@ header .link-items ul {
   margin: 0;
 }
 
-header .link-items ul li a {
+header .link-items > ul li a {
   height: 30px;
   min-width: 40px;
   width: auto;
@@ -50,20 +50,20 @@ header .link-items ul li a {
   font-size: 12px;
 }
 
-header .link-items ul li a i {
+header .link-items > ul li a i {
   color: white;
 }
 
-header .link-items ul li a span {
+header .link-items > ul li a span {
   color: white;
 }
 
-header .link-items ul li .orangeColor {
+header .link-items > ul li .orangeColor {
   background: #fabb3d !important;
   position: relative;
 }
 
-header .link-items ul li .orangeColor .number {
+header .link-items > ul li .orangeColor .number {
   position: absolute;
   top: -1px;
   right: -1px;
@@ -73,39 +73,39 @@ header .link-items ul li .orangeColor .number {
   width: 10px;
 }
 
-header .link-items ul li .darkGreen {
+header .link-items > ul li .darkGreen {
   background: #78cd51 !important;
 }
 
-header .link-items ul li .blueColor {
+header .link-items > ul li .blueColor {
   background: #428bca !important;
 }
 
-header .link-items ul li .redColor {
+header .link-items > ul li .redColor {
   background: #ff5454 !important;
 }
 
-header .link-items ul li:hover a {
+header .link-items > ul li:hover a {
   background: #282b2e;
 }
 
-header .link-items ul li:hover a span {
+header .link-items > ul li:hover a span {
   color: white;
 }
 
-header .link-items ul .dropdown {
+header .link-items > ul .dropdown {
   -webkit-box-shadow: none;
           box-shadow: none;
   outline: none;
 }
 
-header .link-items ul .dropdown .account img {
+header .link-items > ul .dropdown .account img {
   max-height: 28px !important;
   margin: -2px 10px -10px 0px;
   float: left;
 }
 
-header .link-items ul .dropdown .account .user {
+header .link-items > ul .dropdown .account .user {
   display: inline-block;
   text-align: left;
   margin-top: -5px;
@@ -113,11 +113,11 @@ header .link-items ul .dropdown .account .user {
   font-size: 13px;
 }
 
-header .link-items ul .dropdown .account .user span {
+header .link-items > ul .dropdown .account .user span {
   color: white;
 }
 
-header .link-items ul .dropdown .dropdown-item {
+header .link-items > ul .dropdown .dropdown-item {
   background: none;
   color: #262626;
   position: relative;
@@ -128,11 +128,11 @@ header .link-items ul .dropdown .dropdown-item {
   margin-top: 0;
 }
 
-header .link-items ul .dropdown .dropdown-item i {
+header .link-items > ul .dropdown .dropdown-item i {
   color: #262626;
 }
 
-header .link-items ul .dropdown .dropdown-item::before {
+header .link-items > ul .dropdown .dropdown-item::before {
   content: "";
   width: 4px;
   height: 4px;
