--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -12,7 +12,7 @@ header {
   .link-items {
     display: flex;
     justify-content: flex-end;
-    ul {
+   > ul {
       display: flex;
       justify-content: center;
       list-style: none;
